--- a/layout/style.css
+++ b/layout/style.css
@@ -172,6 +172,17 @@ html, body {
     color: var(--text-color);
 }
 
+.copy-button {
+    background: var(--dark-blue);
+    color: white;
+    border: 1px solid var(--dark-blue);
+    border-radius: 24px;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 10px 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
 .footer {
     width: 100%;
     background-color: var(--light-blue);
